--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "mongodb": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
