--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "firebase-admin": "^7.2.0",
     "mongodb": "^3.1.0"
   },
   "devDependencies": {
